@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4PropagatorInField.cc,v 1.11 2000-06-02 09:53:29 japost Exp $
+// $Id: G4PropagatorInField.cc,v 1.12 2000-11-20 19:05:59 gcosmo Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -70,7 +70,7 @@ G4PropagatorInField::
   // Parameters for adaptive Runge-Kutta integration
   //
   G4double      h_TrialStepSize;        // 1st Step Size 
-  G4double      TruePathLength;
+  G4double      TruePathLength= CurrentProposedStepLength;
   G4double      StepTaken= 0.0; 
   G4double      s_length_taken; 
   G4bool        intersects;
@@ -79,15 +79,6 @@ G4PropagatorInField::
   G4double	    NewSafety;
   fParticleIsLooping= false;
 
-  // Set the field manager if the volume has one, else use the global one
-  fCurrentFieldMgr = fDetectorFieldMgr;
-  if( pPhysVol) {
-     G4FieldManager *newFieldMgr=0;
-     newFieldMgr= pPhysVol->GetLogicalVolume()->GetFieldManager(); 
-     if ( newFieldMgr ) 
-        fCurrentFieldMgr = newFieldMgr;
-  }
-  
   G4FieldTrack  CurrentState(pFieldTrack);
 
 #if 0
@@ -358,7 +349,6 @@ G4PropagatorInField::LocateIntersectionPoint(
   G4double    NewSafety;   
   G4bool      first_step= true;
   G4int       substep_no= 0;
-  G4VPhysicalVolume *pPhysVol; 
 
   do{					      // REPEAT
 
